--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-  <title>CSCE 190: [Cameron Long]</title>
+  <title>CSCE 190: Cameron Long</title>
 </head>
 <body>
   <h1>[Cameron Long]</h1>
