--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
 </head>
 <body>
   <h1>Cameron Long</h1>
+  <section class="assign">
+    <img src="ProblemStatementSC.png" />
+    <section class="assign-det">
+    <h2>Problem statement: Balancing AI's Knowledge</h2>
+    <p>
+    Many people fear AI from becoming "too intelligent" for mankind, so how can AI be balanced with the information given to AI to prevent so scenario to occur as well as maintaining the usability of AI?
+    </p>
+    </section>
+    </section>
   </body>
 </html>
