--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Cameron Long</h1>
   <section class="assign">
-    <img src="ProblemStatementSC.png" />
+    <img src="images/ProblemStatementSC.png" />
     <section class="assign-det">
     <h2>Problem statement: Balancing AI's Knowledge</h2>
     <p>
