--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <section class="assign">
 <img src="images/Affinity Diagram for AI.png" />
 <section class="assign-det">
-<a href="files/Affinity Diagram for AI.pdf"><h2>Affinity diagram: Affinity Diagram For AI</h2></a>
+<a href="Files/Affinity Diagram for AI.pdf"><h2>Affinity diagram: Affinity Diagram For AI</h2></a>
 <p>
-This diagram displays our basic ideas about the benefits/problems of AI.</p>
+This diagram displays our basic ideas on both the benefits as well the problems of AI.</p>
 </section>
 </section>
     </p>
