--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Many people fear AI from becoming "too intelligent" for mankind, so how can AI be balanced with the information given to AI to prevent so scenario to occur as well as maintaining the usability of AI?
         <!-- Affinity diagram assignment -->
 <section class="assign">
-<img src="images/Affinity Diagram for AI.png" />
+<img src="Images/Affinity Diagram for AI.png" />
 <section class="assign-det">
 <a href="Files/Affinity Diagram for AI.pdf"><h2>Affinity diagram: Affinity Diagram For AI</h2></a>
 <p>
