--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 <a href="Files/Affinity Diagram for AI.pdf"><h2>Affinity diagram: Affinity Diagram For AI</h2></a>
 <p>
 This diagram displays our basic ideas on both the benefits as well the problems of AI.</p>
+    <!-- Personas assignment -->
+<section class="assign">
+<img src="images/my-persona.jpg" />
+<section class="assign-det">
+<a href="files/all-personas.pdf"><h2>Team Personas: [title]</h2></a>
+<p>
+[Insert text describing your individual persona (name and quote from the template)]
+</p>
+</section>
+</section>
 </section>
 </section>
     </p>
