--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@ This diagram displays our basic ideas on both the benefits as well the problems 
 <section class="assign">
 <img src="images/my-persona.jpg" />
 <section class="assign-det">
-<a href="files/all-personas.pdf"><h2>Team Personas: [title]</h2></a>
+<a href="files/all-personas.pdf"><h2>Team Personas: Nia Moon </h2></a>
 <p>
-[Insert text describing your individual persona (name and quote from the template)]
+I have no free time and i'm starting to get stressed from all of my classes.
 </p>
 </section>
 </section>
