--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 This diagram displays our basic ideas on both the benefits as well the problems of AI.</p>
     <!-- Personas assignment -->
 <section class="assign">
-<img src="images/my-persona.jpg" />
+<img src="images/Nia_Moon_persona___PersonaGenerator-1.png" />
 <section class="assign-det">
 <a href="files/all-personas.pdf"><h2>Team Personas: Nia Moon </h2></a>
 <p>
