--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ This diagram displays our basic ideas on both the benefits as well the problems 
 <section class="assign-det">
 <a href="files/all-personas.pdf"><h2>Team Personas: Nia Moon </h2></a>
 <p>
-I have no free time and i'm starting to get stressed from all of my classes.
+Nia Moon: I have no free time and i'm starting to get stressed from all of my classes.
 </p>
 </section>
 </section>
