--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
   <title>CSCE 190: Cameron Long</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Cameron Long</h1>
