--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <h2>Problem statement: Balancing AI's Knowledge</h2>
     <p>
     Many people fear AI from becoming "too intelligent" for mankind, so how can AI be balanced with the information given to AI to prevent so scenario to occur as well as maintaining the usability of AI?
+   </p>
+</section>
+</section>
+    
         <!-- Affinity diagram assignment -->
 <section class="assign">
 <img src="Images/Affinity Diagram for AI.png" />
@@ -19,20 +23,30 @@
 <a href="Files/Affinity Diagram for AI.pdf"><h2>Affinity diagram: Affinity Diagram For AI</h2></a>
 <p>
 This diagram displays our basic ideas on both the benefits as well the problems of AI.</p>
+ </p>
+</section>
+  </section>
+ </body>
+ </html>
+
     <!-- Personas assignment -->
 <section class="assign">
 <img src="images/Nia_Moon_persona___PersonaGenerator-1.png" />
 <section class="assign-det">
-<a href="files/all-personas.pdf"><h2>Team Personas: Nia Moon </h2></a>
+<a href="Files/Team_Personas.pdf"><h2>Team Personas: Team Personas</h2></a>
 <p>
 Nia Moon: I have no free time and i'm starting to get stressed from all of my classes.
 </p>
 </section>
 </section>
+
+<section class="assign">
+<img src="images/my-storyboard.jpg" />
+<section class="assign-det">
+<a href="files/all-storyboards.pdf"><h2>Team Storyboards: [title]</h2></a>
+<p>
+[Insert text describing your individual storyboard (the scenario you chose)]
+</p>
 </section>
 </section>
-    </p>
-    </section>
-    </section>
-  </body>
-</html>
+  
