--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ This diagram displays our basic ideas on both the benefits as well the problems 
 
     <!-- Personas assignment -->
 <section class="assign">
-<img src="images/Nia_Moon_persona___PersonaGenerator-1.png" />
+<img src="images/Screenshot 2023-10-23 195918.png" />
 <section class="assign-det">
 <a href="Files/Team_Personas.pdf"><h2>Team Personas: Team Personas</h2></a>
 <p>
