--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ This diagram displays our basic ideas on both the benefits as well the problems 
 
     <!-- Personas assignment -->
 <section class="assign">
-<img src="images/Screenshot 2023-10-23 195918.png" />
+<img src="Images/Screenshot 2023-10-23 195918.png" />
 <section class="assign-det">
 <a href="Files/Team_Personas.pdf"><h2>Team Personas: Team Personas</h2></a>
 <p>
@@ -41,7 +41,7 @@ Nia Moon: I have no free time and i'm starting to get stressed from all of my cl
 </section>
 
 <section class="assign">
-<img src="images/my-storyboard.jpg" />
+<img src="Images/my-storyboard.jpg" />
 <section class="assign-det">
 <a href="files/all-storyboards.pdf"><h2>Team Storyboards: [title]</h2></a>
 <p>
