--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Nia Moon: I have no free time and i'm starting to get stressed from all of my cl
 <section class="assign">
 <img src="Images/my-storyboard.jpg" />
 <section class="assign-det">
-<a href="files/all-storyboards.pdf"><h2>Team Storyboards: [title]</h2></a>
+<a href="Files/storyboards.pdf"><h2>Team Storyboards: [title]</h2></a>
 <p>
 [Insert text describing your individual storyboard (the scenario you chose)]
 </p>
