--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@ Nia Moon: I have no free time and i'm starting to get stressed from all of my cl
 </section>
 
 <section class="assign">
-<img src="Images/my-storyboard.jpg" />
+<img src="Images/Storyboard_img.png" />
 <section class="assign-det">
 <a href="Files/storyboards.pdf"><h2>Team Storyboards: [title]</h2></a>
 <p>
-[Insert text describing your individual storyboard (the scenario you chose)]
+Storyboards containing both uses of AI and reasons it needs to be balanced.
 </p>
 </section>
 </section>
