--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Nia Moon: I have no free time and i'm starting to get stressed from all of my cl
 <section class="assign-det">
 <a href="Files/storyboards.pdf"><h2>Team Storyboards: Balancing AI's Knowledge</h2></a>
 <p>
-Storyboards containing uses of AI as well as reasons it needs to be balanced and regulated.
+Nia Moon, A college student wants to finish her assignments faster.
 </p>
 </section>
 </section>
