--- a/index.html
+++ b/index.html
@@ -49,4 +49,13 @@ Nia Moon, A college student wants to finish her assignments faster.
 </p>
 </section>
 </section>
-  
+ 
+<section class="assign">
+ <img src="Images/Sketches.png" />
+ <section class="assign-det">
+ <a href="Files/combined_sketches.pdf"><h2>Team Sketches: AI App</h2></a>
+ <p>
+ Our sketch is about an app that helps users with their problems such as homework, AI Detections, and even simple questions using AI.
+ </p>
+ </section>
+ </section>
