--- a/index.html
+++ b/index.html
@@ -59,3 +59,14 @@ Nia Moon, A college student wants to finish her assignments faster.
  </p>
  </section>
  </section>
+
+<!-- Paper prototype assignment -->
+ <section class="assign">
+ <img src="Images/team-prototype.png" />
+ <section class="assign-det">
+ <a href="https://youtu.be/7nm23a4VqrU?si=Z-mKLR-UUaS-HGrk"><h2>Team Paper Prototype: [AI App]</h2></a>
+ <p>
+ [Insert text describing your team paper prototype]
+ </p>
+ </section>
+ </section>
