--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ Nia Moon, A college student wants to finish her assignments faster.
  <section class="assign">
  <img src="Images/team-prototype.png" />
  <section class="assign-det">
- <a href="https://youtu.be/7nm23a4VqrU?si=Z-mKLR-UUaS-HGrk"><h2>Team Paper Prototype: [AI App]</h2></a>
+ <a href="https://youtu.be/7nm23a4VqrU?si=Z-mKLR-UUaS-HGrk"><h2>Team Paper Prototype: AI App</h2></a>
  <p>
- [Insert text describing your team paper prototype]
+ We present a prototype where AI could provide the help you need by simply clicking a button or typing whatever you need.
  </p>
  </section>
  </section>
