--- a/index.html
+++ b/index.html
@@ -68,5 +68,15 @@ Nia Moon, A college student wants to finish her assignments faster.
  <p>
  We present a prototype where AI could provide the help you need by simply clicking a button or typing whatever you need.
  </p>
+      <!-- Hi-Fi Prototype assignment -->
+      <section class="assign">
+       <img src="images/Hi-Fi Prototype.png" />
+       <section class="assign-det">
+         <a href="https://youtu.be/mtTBi0MV0SA?si=U0cYnEUffcexRhDI"><h2>Team Prototype: AI App</h2></a>
+      <p>
+         We present an interactive demonstration of our prototype that shows how to navigate through the application.
+      </p>
+   </section>
+ </section>
  </section>
  </section>
